# AI-Powered-Multi-Agent-Research-System

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/src/: main.py
backend/src/Pipeline/: research_service_pipeline.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Hero.jsx  LoadingState.jsx  Navbar.jsx  ReportViewer.jsx  ResearchForm.jsx
frontend/src/services/: api.js
